@@ -190,7 +190,6 @@ comes with this distribution for details.
 - Test2::Tools::URL
 - Test::Alien::CPP
 - Test::Archive::Libarchive
-- Test::CChecker
 - Test::CPAN::Changes
 - Test::EOL
 - Test::Fixme
