@@ -179,7 +179,6 @@ Term::Clui                                     = 1.76
 Term::EditLine                                 = 0.11
 Test::Alien::CPP                               = 1.02
 Test::Archive::Libarchive                      = 0.02
-Test::CChecker                                 = 0.10
 Test::Fixme                                    = 0.16
 Test::Script                                   = 1.29
 Test::Version                                  = 2.09
