@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Updated my dists to latest
+  - Remove deprecated Test::CChecker
 
 2.28      2021-11-14 08:47:58 -0700
   - Updated my dists to latest
